version/0.14/_sources/api/ansys/dpf/core/operators/scoping/adapt_with_scopings_container/InputsAdaptWithScopingsContainer.rst.txt






:class:`InputsAdaptWithScopingsContainer`
=========================================


.. py:class:: ansys.dpf.core.operators.scoping.adapt_with_scopings_container.InputsAdaptWithScopingsContainer(op: ansys.dpf.core.dpf_operator.Operator)

   Bases: :py:obj:`ansys.dpf.core.inputs._Inputs`


   Intermediate class used to connect user inputs to
   adapt_with_scopings_container operator.

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.scoping.adapt_with_scopings_container()
   >>> my_field_or_fields_container = dpf.FieldsContainer()
   >>> op.inputs.field_or_fields_container.connect(my_field_or_fields_container)
   >>> my_scopings_container = dpf.ScopingsContainer()
   >>> op.inputs.scopings_container.connect(my_scopings_container)
   >>> my_keep_empty_fields = bool()
   >>> op.inputs.keep_empty_fields.connect(my_keep_empty_fields)






.. py:currentmodule:: InputsAdaptWithScopingsContainer

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~connect`
            - Connect any input (an entity or an operator output) to any input pin of this operator.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~field_or_fields_container`
            - Allows to connect field_or_fields_container input to the operator.
          * - :py:attr:`~scopings_container`
            - Allows to connect scopings_container input to the operator.
          * - :py:attr:`~keep_empty_fields`
            - Allows to connect keep_empty_fields input to the operator.




   .. tab-item:: Special methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~__str__`
            - 
          * - :py:attr:`~__call__`
            - 
          * - :py:attr:`~__getitem__`
            - 




Import detail
-------------

.. code-block:: python

    from ansys.dpf.core.operators.scoping.adapt_with_scopings_container import InputsAdaptWithScopingsContainer

Property detail
---------------

.. py:property:: field_or_fields_container
   :type: ansys.dpf.core.inputs.Input


   Allows to connect field_or_fields_container input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.scoping.adapt_with_scopings_container()
   >>> op.inputs.field_or_fields_container.connect(my_field_or_fields_container)
   >>> # or
   >>> op.inputs.field_or_fields_container(my_field_or_fields_container)

.. py:property:: scopings_container
   :type: ansys.dpf.core.inputs.Input


   Allows to connect scopings_container input to the operator.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.scoping.adapt_with_scopings_container()
   >>> op.inputs.scopings_container.connect(my_scopings_container)
   >>> # or
   >>> op.inputs.scopings_container(my_scopings_container)

.. py:property:: keep_empty_fields
   :type: ansys.dpf.core.inputs.Input


   Allows to connect keep_empty_fields input to the operator.

   Default false.

   :returns: An Input instance for this pin.
   :rtype: input

   .. rubric:: Examples

   >>> from ansys.dpf import core as dpf
   >>> op = dpf.operators.scoping.adapt_with_scopings_container()
   >>> op.inputs.keep_empty_fields.connect(my_keep_empty_fields)
   >>> # or
   >>> op.inputs.keep_empty_fields(my_keep_empty_fields)




Method detail
-------------

.. py:method:: __str__()

.. py:method:: connect(inpt)

   Connect any input (an entity or an operator output) to any input pin of this operator.

   Searches for the input type corresponding to the output.

   .. deprecated::
       Deprecated in favor of explicit output-to-input connections.

   :param inpt:
   :type inpt: str, int, double, bool, list[int], list[float], Field, FieldsContainer, Scoping, Enum,
   :param ScopingsContainer: Input of the operator.
   :type ScopingsContainer: E501
   :param MeshedRegion: Input of the operator.
   :type MeshedRegion: E501
   :param MeshesContainer: Input of the operator.
   :type MeshesContainer: E501
   :param DataSources: Input of the operator.
   :type DataSources: E501
   :param CyclicSupport: Input of the operator.
   :type CyclicSupport: E501
   :param Outputs: Input of the operator.
   :type Outputs: E501
   :param os.PathLike  # noqa: Input of the operator.
   :type os.PathLike  # noqa: E501


.. py:method:: __call__(inpt)

.. py:method:: __getitem__(item) -> Input




